--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
-    "validator": "^13.7.0",
-    "*.ejs": "html",
-    "*.js": "html"
+    "validator": "^13.7.0"
   },
   "name": "libraryapp",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
